# Dog

./: .gitignore  .gitmodules  Dockerfile  Dog.spec  LICENSE  README.md  box.scad  bullet-fvh.rs  dockerrun  helping-me-out.md  log.txt  versions.txt  yukari_86582212.bin-LICENSE.md
.github/workflows/: macos.yaml
app/: CMakeLists.txt  README.md  book  build.sh  git_revision.py  how-to-build.txt  lichess-big3-resolved_to_epd.py  partitions.csv  partitions_singleapp_large.csv  platformio.ini  requirements.txt  run.sh  sdkconfig  sdkconfig.adafruit_qtpy_esp32s3_nopsram  sdkconfig.esp32  sdkconfig.wemos-d1-mini32  start.sh  test.sh  time-test.py  toggle.py  tune-to-h.py  wrapper-local.sh  wrapper.py  wrapper.sh
app/book/: README.md  eco.pgn  gen-lichess.py  gen-silly-moves.py  make.sh  noomen-pohl-select-books_x_4-combined-50.pgn
app/src/: CMakeLists.txt  book.cpp  book.h  bullet-fvh.rs  collect-fens-Dog-nnue.py  emit_stats.cpp  eval-stats.cpp  eval-stats.h  eval.cpp  eval.h  eval_par.cpp  eval_par.h  eval_par_get.h  eval_par_psq.h  eval_par_set.h  gen-lmr-red-table.py  gen-train-data.py  gen-version-compare.py  gen_psq.py  hello_world_main.c  inbuf.h  lmr-red.h  main.cpp  main.h  max-ascii.cpp  max-ascii.h  max.cpp  max.h  my_tuner.h  nnue.cpp  nnue.h  psq.cpp  psq.h  psq_inc.h  san.cpp  san.h  search.cpp  search.h  state_exporter.cpp  state_exporter.h  (+23 more)
app/src/android/DogChessEngine/: .project  AndroidManifest.xml  build.sh
app/src/android/DogChessEngine/jni/: Android.mk  Application.mk
app/src/android/DogChessEngine/res/xml/: enginelist.xml
app/src/android/DogChessEngine/src/com/kalab/chess/dog/: DogEngineProvider.java  MainActivity.java
app/src/linux-windows/: CMakeLists.txt  Makefile  mingw64.cmake
app/src/linux-windows/historic-versions/: historic.csv  matefinder.py  matefinder.txt  tournament.sh
disp/: disp.ino  platformio.ini
disp2/: disp2.ino  platformio.ini
